--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -2,32 +2,35 @@ name: Generate pacman animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "0 */12 * * *" 
 
-  workflow_dispatch:
+  workflow_dispatch: 
 
-  push:
+  push: 
     branches:
-    - main
+      - main
 
-jobs:
+jobs: 
   generate:
     permissions:
-      contents: write
+      contents: write 
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4 
+
       - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
-
-
+         
       - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist
+          
+          build_dir: . 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
