--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           target_branch: output
           
-          build_dir: . 
+          build_dir: dist 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
