--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -27,10 +27,10 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
 
       - name: push pacman-contribution-graph.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: crazy-max/ghaction-github-pages@v4 # ATUALIZADO para v4
         with:
           target_branch: output
           build_dir: . 
-          force_orphan: true
+          keep_history: false 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
