--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -13,7 +13,8 @@ on:
 jobs: 
   generate:
     permissions:
-      contents: write 
+      contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
@@ -25,12 +26,17 @@ jobs:
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
+          
+      - name: Move generated files to output directory
+        run: |
+          mkdir -p output
+          mv pacman-contribution-graph*.svg output/
 
       - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v4 # ATUALIZADO para v4
         with:
           target_branch: output
-          build_dir: . 
+          build_dir: output
           keep_history: false 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
